fix: backdrop size on mobiles fixed, scroll added;

--- a/src/conponents/modal/Backdrop.module.scss
+++ b/src/conponents/modal/Backdrop.module.scss
@@ -1,4 +1,11 @@
 @import "../../sass/utils/mixin";
+// ::-webkit-scrollbar-thumb{
+//     height: 20px;
+//     width: 20px;
+// }
+::-webkit-scrollbar {
+    width: 0px;
+}
 .backdrop{
     position: fixed;
     top: 0;
@@ -6,6 +13,8 @@
     width: 100%;
     height: 100%;   
     overflow: hidden;
+    overflow-y: auto;
+    // overflow: scroll;
     
     display: flex;
     justify-content: center;
@@ -13,21 +22,34 @@
 
     background-color: rgba(0, 0, 0, 0.8);
     z-index: 100;
+
+    &::-webkit-scrollbar {
+        width: 0px;
+    }
 }
 
 .modalContainer{
-    padding: 64px 64px;
+    padding: 32px 32px;
     width: 565px;
+    max-height: 100vh;
     position: relative;
-    display: flex;
-    flex-direction: column;
     background-color: #FFF;
     border-radius: 32px;
+    overflow-y: auto;
+
+    &::-webkit-scrollbar-thumb{
+        height: 20px;
+        width: 20px;
+    }
 
     @include mobile_max {
         width: 280px;
         min-width: 260px;
-        padding: 32px 32px;
+        // padding: 32px 32px;
+    }
+
+    @include laptop {
+        padding: 64px 64px;
     }
 }
 
@@ -57,3 +79,15 @@
         top: 15px;
     }
 }
+
+// .childrenContainer{
+//     // position: absolute;
+//     padding: 0px 32px;
+//     // max-height: 90vh;
+//     // max-height: 200px;
+//     max-height: calc(100vh - 60px);
+
+//     overflow-y: auto;
+//     // overflow-y: visible;
+//     // outline: 1px solid red;
+// }
